# a-stock-trading

./: .env.example  .gitignore  .gitleaks.toml  Agent清单.md  CLAUDE.md  LICENSE  README.md  config.py  config.yaml.example  pyproject.toml  盘中任务表.md
agents/: README.md  __main__.py  config.py  intraday_team.md  opening_analysis.md  runner.py
backtest/: README.md  __init__.py  __main__.py  adapter.py  distill.py  import_experience.py  layered_engine.py  monitor_backtest.py  monitor_backtest_v2.py  param_sweep.py  param_sweep_v4.py  run.py  screener.py  shadow_runner.py
chat/: __init__.py  __main__.py  agent.mjs  agent.py  bridge.mjs  coordinator.py  feishu_bot.py  index.mjs  tools.mjs
data/: backfill_intraday.py  backfill_minute_bars_sina.py  backfill_stock_data.py  chinese_holidays.json  data_quality_audit.py  data_quality_fix.py  export_daily_summary.py  import_history.py  intraday_data.py  mootdx_tool.py  pull_and_backfill.py  rebuild_limit_up.py
data_tools/: data_quality_check.py  fix_stock_meta.py  synthesize_minute_bars.py
docs/: evolution-plan.md  iteration-plan-2026-05-11.md  trade-agent-roadmap-2026-05-11.md
intraday/: README.md  cli.py  config.py  graph.py  runner.py
knowledge/: A股短线交易规则整理.md  quantitative_rules.json  stocks_template.md  框架.md
monitor/: .news_monitor_heartbeat  agent.py  news_monitor.py
news_monitor/: __main__.py  agent.py  morning_brief.py  morning_brief_us.py  news_monitor.py
review/: __main__.py  experience_backtest.py  graph.py  main.py  prompts.py  run_backtest.py  run_backtest_v2.py  run_backtest_v3.py  run_backtest_v4.py  run_backtest_v5.py  run_backtest_v6.py  state.py
scripts/: backfill_stock_data.py  export_daily_summary.py  import_history.py  mootdx_tool.py  news_monitor.py  opening_analysis.py  pull_and_backfill.py  run_backtest.py  run_backtest_v2.py  run_backtest_v5.py
short_term_agents/: backtest.py  graph.py  (+4 more)
(+127 files in other folders)
