[project]
name = "a-stock-trading"
version = "0.1.0"
description = "A股短线交易分析工具集"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "mootdx",
    "langgraph",
    "langchain-openai",
]

[project.optional-dependencies]
dev = ["rich"]

[project.scripts]
intraday-agent = "intraday.runner:main"
review-agent = "review.main:cli"
