[project]
name = "a-stock-trading"
version = "0.1.0"
description = "A股短线交易分析工具集"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "mootdx",
    "pandas",
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "lark-oapi",
]

[project.optional-dependencies]
dev = ["rich"]

[project.scripts]
intraday-agent = "intraday.cli:main"
review-agent = "review.main:cli"
monitor-agent = "monitor.agent:main"
trading-doctor = "tools.doctor:main"
chat-agent = "chat.__main__:main"
backtest-v6 = "review.experience_backtest:main"
